# searchEngine

./: CMakeLists.txt  README.md  answers.json  config.json  main.cpp  requests.json  test.cpp
include/: classes.h
resourses/: file004.txt
src/: CMakeLists.txt  classes.cpp
